testsuite/poke.pkl/eq-f64-diag-1.pk
/* { dg-do compile } */

var res
  = (5 as int<31>) .== 1L; /* { dg-error "invalid operand .*" } */
